# mintmigrate

./: .gitignore  README.md  launch_mintmigrate.sh  mintmigrate.py  pyproject.toml
.claude/: settings.local.json
modules/: __init__.py  browser.py  crontab.py  dialog_gui.py  dotfiles.py  files.py  manifest_io.py  packages.py  permissions.py  ui.py
