[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mintmigrate"
version = "0.1.0"
description = "One-time Linux Mint desktop migration helper (rsync over SSH)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
mintmigrate = "mintmigrate:main"

[tool.setuptools]
py-modules = ["mintmigrate"]
packages = ["modules"]
